# AprendizajeAutomatico

./: .gitignore  .python-version  Makefile  dev-requirements.txt  pyproject.toml  requirements.txt
dsProject/: arboles_decision.ipynb
