[project]
name = "AprendizajeAutomatico"
description = "Ambiente virtual para la clase de Aprendizaje Computacional"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    {name = "Alfonso Toriz"}
]

dependencies = [
    "seaborn==0.12.2",
    "polars==0.16.13",
    "numpy==1.24.2",
    "scikit-learn==1.2.2",
    "scipy==1.10.1"
]

[project.optional-dependencies]
dev = [
    "pip-tools==6.12.3"
]
